pkg/sqlparser/y.output

state 0
	$accept: .any_command $end 

	SELECT  shift 23
	STREAM  shift 24
	INSERT  shift 48
	UPDATE  shift 26
	DELETE  shift 27
	DESC  shift 42
	SET  shift 28
	USE  shift 37
	'('  shift 50
	CREATE  shift 30
	ALTER  shift 31
	DROP  shift 33
	RENAME  shift 32
	ANALYZE  shift 35
	SHOW  shift 36
	DESCRIBE  shift 43
	EXPLAIN  shift 44
	REPAIR  shift 45
	OPTIMIZE  shift 46
	TRUNCATE  shift 34
	BEGIN  shift 38
	START  shift 39
	COMMIT  shift 40
	ROLLBACK  shift 41
	REPLACE  shift 49
	.  error

	command  goto 2
	select_statement  goto 3
	base_select  goto 21
	union_lhs  goto 22
	stream_statement  goto 4
	insert_statement  goto 5
	update_statement  goto 6
	delete_statement  goto 7
	set_statement  goto 8
	create_statement  goto 9
	alter_statement  goto 10
	rename_statement  goto 11
	drop_statement  goto 12
	truncate_statement  goto 13
	create_table_prefix  goto 29
	analyze_statement  goto 14
	show_statement  goto 15
	use_statement  goto 16
	other_statement  goto 20
	begin_statement  goto 17
	commit_statement  goto 18
	rollback_statement  goto 19
	insert_or_replace  goto 25
	any_command  goto 1
	openb  goto 47

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.semicolon_opt 
	semicolon_opt: .    (2)

	';'  shift 52
	.  reduce 2 (src line 312)

	semicolon_opt  goto 51

state 3
	command:  select_statement.    (4)
	union_lhs:  select_statement.    (27)

	UNION  reduce 27 (src line 370)
	.  reduce 4 (src line 316)


state 4
	command:  stream_statement.    (5)

	.  reduce 5 (src line 321)


state 5
	command:  insert_statement.    (6)

	.  reduce 6 (src line 322)


state 6
	command:  update_statement.    (7)

	.  reduce 7 (src line 323)


state 7
	command:  delete_statement.    (8)

	.  reduce 8 (src line 324)


state 8
	command:  set_statement.    (9)

	.  reduce 9 (src line 325)


state 9
	command:  create_statement.    (10)

	.  reduce 10 (src line 326)


state 10
	command:  alter_statement.    (11)

	.  reduce 11 (src line 327)


state 11
	command:  rename_statement.    (12)

	.  reduce 12 (src line 328)


state 12
	command:  drop_statement.    (13)

	.  reduce 13 (src line 329)


state 13
	command:  truncate_statement.    (14)

	.  reduce 14 (src line 330)


state 14
	command:  analyze_statement.    (15)

	.  reduce 15 (src line 331)


state 15
	command:  show_statement.    (16)

	.  reduce 16 (src line 332)


state 16
	command:  use_statement.    (17)

	.  reduce 17 (src line 333)


state 17
	command:  begin_statement.    (18)

	.  reduce 18 (src line 334)


state 18
	command:  commit_statement.    (19)

	.  reduce 19 (src line 335)


state 19
	command:  rollback_statement.    (20)

	.  reduce 20 (src line 336)


state 20
	command:  other_statement.    (21)

	.  reduce 21 (src line 337)


state 21
	select_statement:  base_select.order_by_opt limit_opt lock_opt 
	order_by_opt: .    (510)

	ORDER  shift 54
	.  reduce 510 (src line 2606)

	order_by_opt  goto 53

state 22
	select_statement:  union_lhs.union_op union_rhs order_by_opt limit_opt lock_opt 

	UNION  shift 56
	.  error

	union_op  goto 55

state 23
	select_statement:  SELECT.comment_opt cache_opt NEXT num_val for_from table_name 
	base_select:  SELECT.comment_opt cache_opt distinct_opt straight_join_opt select_expression_list from_opt where_expression_opt group_by_opt having_opt 
	$$277: .    (277)

	.  reduce 277 (src line 1555)

	comment_opt  goto 57
	$$277  goto 58

state 24
	stream_statement:  STREAM.comment_opt select_expression FROM table_name 
	$$277: .    (277)

	.  reduce 277 (src line 1555)

	comment_opt  goto 59
	$$277  goto 58

state 25
	insert_statement:  insert_or_replace.comment_opt ignore_opt into_table_name opt_partition_clause insert_data on_dup_opt 
	insert_statement:  insert_or_replace.comment_opt ignore_opt into_table_name opt_partition_clause SET update_list on_dup_opt 
	$$277: .    (277)

	.  reduce 277 (src line 1555)

	comment_opt  goto 60
	$$277  goto 58

state 26
	update_statement:  UPDATE.comment_opt table_references SET update_list where_expression_opt order_by_opt limit_opt 
	$$277: .    (277)

	.  reduce 277 (src line 1555)

	comment_opt  goto 61
	$$277  goto 58

state 27
	delete_statement:  DELETE.comment_opt FROM table_name opt_partition_clause where_expression_opt order_by_opt limit_opt 
	delete_statement:  DELETE.comment_opt FROM table_name_list USING table_references where_expression_opt 
	delete_statement:  DELETE.comment_opt table_name_list from_or_using table_references where_expression_opt 
	$$277: .    (277)

	.  reduce 277 (src line 1555)

	comment_opt  goto 62
	$$277  goto 58

state 28
	set_statement:  SET.comment_opt set_list 
	set_statement:  SET.comment_opt set_session_or_global set_list 
	set_statement:  SET.comment_opt set_session_or_global TRANSACTION transaction_chars 
	set_statement:  SET.comment_opt TRANSACTION transaction_chars 
	$$277: .    (277)

	.  reduce 277 (src line 1555)

	comment_opt  goto 63
	$$277  goto 58

state 29
	create_statement:  create_table_prefix.table_spec 

	'('  shift 65
	.  error

	table_spec  goto 64

state 30
	create_statement:  CREATE.constraint_opt INDEX ID using_opt ON table_name ddl_force_eof 
	create_statement:  CREATE.VIEW table_name ddl_force_eof 
	create_statement:  CREATE.OR REPLACE VIEW table_name ddl_force_eof 
	create_statement:  CREATE.VINDEX sql_id vindex_type_opt vindex_params_opt 
	create_statement:  CREATE.DATABASE not_exists_opt ID ddl_force_eof 
	create_statement:  CREATE.SCHEMA not_exists_opt ID ddl_force_eof 
	create_table_prefix:  CREATE.TABLE not_exists_opt table_name 
	constraint_opt: .    (587)

	OFFSET  shift 125
	DUPLICATE  shift 93
	KEYS  shift 107
	LAST_INSERT_ID  shift 109
	VALUE  shift 164
	SHARE  shift 142
	MODE  shift 118
	ID  shift 75
	COMMENT_KEYWORD  shift 86
	OR  shift 68
	SCHEMA  shift 71
	TABLE  shift 72
	VIEW  shift 67
	UNIQUE  shift 73
	PRIMARY  shift 131
	SPATIAL  shift 145
	FULLTEXT  shift 98
	FOREIGN  shift 97
	KEY_BLOCK_SIZE  shift 106
	DATE  shift 89
	REPAIR  shift 137
	OPTIMIZE  shift 127
	TRUNCATE  shift 157
	PARTITION  shift 128
	REORGANIZE  shift 136
	LESS  shift 110
	THAN  shift 149
	PROCEDURE  shift 132
	TRIGGER  shift 156
	VINDEX  shift 69
	VINDEXES  shift 165
	STATUS  shift 147
	VARIABLES  shift 163
	BEGIN  shift 78
	START  shift 146
	TRANSACTION  shift 155
	COMMIT  shift 87
	ROLLBACK  shift 139
	BIT  shift 80
	TINYINT  shift 153
	SMALLINT  shift 144
	MEDIUMINT  shift 116
	INT  shift 102
	INTEGER  shift 103
	BIGINT  shift 79
	REAL  shift 135
	DOUBLE  shift 92
	FLOAT_TYPE  shift 96
	DECIMAL  shift 91
	NUMERIC  shift 124
	TIME  shift 150
	TIMESTAMP  shift 151
	DATETIME  shift 90
	YEAR  shift 172
	CHAR  shift 83
	VARCHAR  shift 162
	BOOL  shift 82
	CHARACTER  shift 84
	VARBINARY  shift 161
	NCHAR  shift 123
	TEXT  shift 148
	TINYTEXT  shift 154
	MEDIUMTEXT  shift 117
	LONGTEXT  shift 114
	BLOB  shift 81
	TINYBLOB  shift 152
	MEDIUMBLOB  shift 115
	LONGBLOB  shift 113
	JSON  shift 105
	ENUM  shift 94
	GEOMETRY  shift 99
	POINT  shift 129
	LINESTRING  shift 112
	POLYGON  shift 130
	GEOMETRYCOLLECTION  shift 100
	MULTIPOINT  shift 120
	MULTILINESTRING  shift 119
	MULTIPOLYGON  shift 121
	SIGNED  shift 143
	UNSIGNED  shift 159
	ZEROFILL  shift 173
	VITESS_KEYSPACES  shift 166
	VITESS_SHARDS  shift 167
	VITESS_TABLETS  shift 168
	VSCHEMA_TABLES  shift 169
	NAMES  shift 122
	CHARSET  shift 85
	GLOBAL  shift 101
	SESSION  shift 140
	ISOLATION  shift 104
	LEVEL  shift 111
	READ  shift 134
	WRITE  shift 171
	ONLY  shift 126
	REPEATABLE  shift 138
	COMMITTED  shift 88
	UNCOMMITTED  shift 158
	SERIALIZABLE  shift 141
	DATABASE  shift 70
	AGAINST  shift 77
	LANGUAGE  shift 108
	WITH  shift 170
	QUERY  shift 133
	EXPANSION  shift 95
	UNUSED  shift 160
	.  reduce 587 (src line 2922)

	constraint_opt  goto 66
	non_reserved_keyword  goto 76
	sql_id  goto 74

state 31
	alter_statement:  ALTER.ignore_opt TABLE table_name non_add_drop_or_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE table_name ADD alter_object_type force_eof 
	alter_statement:  ALTER.ignore_opt TABLE table_name DROP alter_object_type force_eof 
	alter_statement:  ALTER.ignore_opt TABLE table_name ADD VINDEX sql_id '(' column_list ')' vindex_type_opt vindex_params_opt 
	alter_statement:  ALTER.ignore_opt TABLE table_name DROP VINDEX sql_id 
	alter_statement:  ALTER.ignore_opt TABLE table_name RENAME to_opt table_name 
	alter_statement:  ALTER.ignore_opt TABLE table_name RENAME index_opt force_eof 
	alter_statement:  ALTER.VIEW table_name ddl_force_eof 
	alter_statement:  ALTER.ignore_opt TABLE table_name partition_operation 
	ignore_opt: .    (570)

	VIEW  shift 175
	IGNORE  shift 176
	.  reduce 570 (src line 2882)

	ignore_opt  goto 174

state 32
	rename_statement:  RENAME.TABLE table_name TO table_name 

	TABLE  shift 177
	.  error


state 33
	drop_statement:  DROP.TABLE exists_opt table_name 
	drop_statement:  DROP.INDEX ID ON table_name ddl_force_eof 
	drop_statement:  DROP.VIEW exists_opt table_name ddl_force_eof 
	drop_statement:  DROP.DATABASE exists_opt ID 
	drop_statement:  DROP.SCHEMA exists_opt ID 

	SCHEMA  shift 182
	TABLE  shift 178
	INDEX  shift 179
	VIEW  shift 180
	DATABASE  shift 181
	.  error


state 34
	truncate_statement:  TRUNCATE.TABLE table_name 
	truncate_statement:  TRUNCATE.table_name 

	OFFSET  shift 125
	DUPLICATE  shift 93
	KEYS  shift 107
	LAST_INSERT_ID  shift 109
	VALUE  shift 164
	SHARE  shift 142
	MODE  shift 118
	ID  shift 186
	COMMENT_KEYWORD  shift 86
	TABLE  shift 183
	VIEW  shift 188
	PRIMARY  shift 131
	SPATIAL  shift 145
	FULLTEXT  shift 98
	FOREIGN  shift 97
	KEY_BLOCK_SIZE  shift 106
	DATE  shift 89
	REPAIR  shift 137
	OPTIMIZE  shift 127
	TRUNCATE  shift 157
	PARTITION  shift 128
	REORGANIZE  shift 136
	LESS  shift 110
	THAN  shift 149
	PROCEDURE  shift 132
	TRIGGER  shift 156
	VINDEX  shift 189
	VINDEXES  shift 165
	STATUS  shift 147
	VARIABLES  shift 163
	BEGIN  shift 78
	START  shift 146
	TRANSACTION  shift 155
	COMMIT  shift 87
	ROLLBACK  shift 139
	BIT  shift 80
	TINYINT  shift 153
	SMALLINT  shift 144
	MEDIUMINT  shift 116
	INT  shift 102
	INTEGER  shift 103
	BIGINT  shift 79
	REAL  shift 135
	DOUBLE  shift 92
	FLOAT_TYPE  shift 96
	DECIMAL  shift 91
	NUMERIC  shift 124
	TIME  shift 150
	TIMESTAMP  shift 151
	DATETIME  shift 90
	YEAR  shift 172
	CHAR  shift 83
	VARCHAR  shift 162
	BOOL  shift 82
	CHARACTER  shift 84
	VARBINARY  shift 161
	NCHAR  shift 123
	TEXT  shift 148
	TINYTEXT  shift 154
	MEDIUMTEXT  shift 117
	LONGTEXT  shift 114
	BLOB  shift 81
	TINYBLOB  shift 152
	MEDIUMBLOB  shift 115
	LONGBLOB  shift 113
	JSON  shift 105
	ENUM  shift 94
	GEOMETRY  shift 99
	POINT  shift 129
	LINESTRING  shift 112
	POLYGON  shift 130
	GEOMETRYCOLLECTION  shift 100
	MULTIPOINT  shift 120
	MULTILINESTRING  shift 119
	MULTIPOLYGON  shift 121
	SIGNED  shift 143
	UNSIGNED  shift 159
	ZEROFILL  shift 173
	VITESS_KEYSPACES  shift 166
	VITESS_SHARDS  shift 167
	VITESS_TABLETS  shift 168
	VSCHEMA_TABLES  shift 169
	NAMES  shift 122
	CHARSET  shift 85
	GLOBAL  shift 101
	SESSION  shift 140
	ISOLATION  shift 104
	LEVEL  shift 111
	READ  shift 134
	WRITE  shift 171
	ONLY  shift 126
	REPEATABLE  shift 138
	COMMITTED  shift 88
	UNCOMMITTED  shift 158
	SERIALIZABLE  shift 141
	AGAINST  shift 77
	LANGUAGE  shift 108
	WITH  shift 170
	QUERY  shift 133
	EXPANSION  shift 95
	UNUSED  shift 160
	.  error

	table_name  goto 184
	non_reserved_keyword  goto 187
	table_id  goto 185

state 35
	analyze_statement:  ANALYZE.TABLE table_name 

	TABLE  shift 190
	.  error


state 36
	show_statement:  SHOW.BINARY ID ddl_force_eof 
	show_statement:  SHOW.CHARACTER SET ddl_force_eof 
	show_statement:  SHOW.CREATE DATABASE ddl_force_eof 
	show_statement:  SHOW.CREATE ID ddl_force_eof 
	show_statement:  SHOW.CREATE PROCEDURE ddl_force_eof 
	show_statement:  SHOW.CREATE TABLE ddl_force_eof 
	show_statement:  SHOW.CREATE TRIGGER ddl_force_eof 
	show_statement:  SHOW.CREATE VIEW ddl_force_eof 
	show_statement:  SHOW.DATABASES ddl_force_eof 
	show_statement:  SHOW.INDEX ddl_force_eof 
	show_statement:  SHOW.KEYS ddl_force_eof 
	show_statement:  SHOW.PROCEDURE ddl_force_eof 
	show_statement:  SHOW.show_session_or_global STATUS ddl_force_eof 
	show_statement:  SHOW.TABLE ddl_force_eof 
	show_statement:  SHOW.extended_opt full_opt tables_or_processlist from_database_opt like_or_where_opt 
	show_statement:  SHOW.show_session_or_global VARIABLES ddl_force_eof 
	show_statement:  SHOW.VINDEXES 
	show_statement:  SHOW.VINDEXES ON table_name 
	show_statement:  SHOW.VITESS_KEYSPACES 
	show_statement:  SHOW.VITESS_SHARDS 
	show_statement:  SHOW.VITESS_TABLETS 
	show_statement:  SHOW.VSCHEMA_TABLES 
	show_statement:  SHOW.ID ddl_force_eof 
	show_session_or_global: .    (263)
	extended_opt: .    (253)

	KEYS  shift 196
	ID  shift 206
	BINARY  shift 191
	CREATE  shift 193
	TABLE  shift 199
	INDEX  shift 195
	PROCEDURE  shift 197
	VINDEXES  shift 201
	STATUS  reduce 263 (src line 1487)
	VARIABLES  reduce 263 (src line 1487)
	CHARACTER  shift 192
	DATABASES  shift 194
	VITESS_KEYSPACES  shift 202
	VITESS_SHARDS  shift 203
	VITESS_TABLETS  shift 204
	VSCHEMA_TABLES  shift 205
	EXTENDED  shift 209
	GLOBAL  shift 208
	SESSION  shift 207
	.  reduce 253 (src line 1439)

	extended_opt  goto 200
	show_session_or_global  goto 198

state 37
	use_statement:  USE.table_id 
	use_statement:  USE.    (267)

	OFFSET  shift 125
	DUPLICATE  shift 93
	KEYS  shift 107
	LAST_INSERT_ID  shift 109
	VALUE  shift 164
	SHARE  shift 142
	MODE  shift 118
	ID  shift 186
	COMMENT_KEYWORD  shift 86
	VIEW  shift 188
	PRIMARY  shift 131
	SPATIAL  shift 145
	FULLTEXT  shift 98
	FOREIGN  shift 97
	KEY_BLOCK_SIZE  shift 106
	DATE  shift 89
	REPAIR  shift 137
	OPTIMIZE  shift 127
	TRUNCATE  shift 157
	PARTITION  shift 128
	REORGANIZE  shift 136
	LESS  shift 110
	THAN  shift 149
	PROCEDURE  shift 132
	TRIGGER  shift 156
	VINDEX  shift 189
	VINDEXES  shift 165
	STATUS  shift 147
	VARIABLES  shift 163
	BEGIN  shift 78
	START  shift 146
	TRANSACTION  shift 155
	COMMIT  shift 87
	ROLLBACK  shift 139
	BIT  shift 80
	TINYINT  shift 153
	SMALLINT  shift 144
	MEDIUMINT  shift 116
	INT  shift 102
	INTEGER  shift 103
	BIGINT  shift 79
	REAL  shift 135
	DOUBLE  shift 92
	FLOAT_TYPE  shift 96
	DECIMAL  shift 91
	NUMERIC  shift 124
	TIME  shift 150
	TIMESTAMP  shift 151
	DATETIME  shift 90
	YEAR  shift 172
	CHAR  shift 83
	VARCHAR  shift 162
	BOOL  shift 82
	CHARACTER  shift 84
	VARBINARY  shift 161
	NCHAR  shift 123
	TEXT  shift 148
	TINYTEXT  shift 154
	MEDIUMTEXT  shift 117
	LONGTEXT  shift 114
	BLOB  shift 81
	TINYBLOB  shift 152
	MEDIUMBLOB  shift 115
	LONGBLOB  shift 113
	JSON  shift 105
	ENUM  shift 94
	GEOMETRY  shift 99
	POINT  shift 129
	LINESTRING  shift 112
	POLYGON  shift 130
	GEOMETRYCOLLECTION  shift 100
	MULTIPOINT  shift 120
	MULTILINESTRING  shift 119
	MULTIPOLYGON  shift 121
	SIGNED  shift 143
	UNSIGNED  shift 159
	ZEROFILL  shift 173
	VITESS_KEYSPACES  shift 166
	VITESS_SHARDS  shift 167
	VITESS_TABLETS  shift 168
	VSCHEMA_TABLES  shift 169
	NAMES  shift 122
	CHARSET  shift 85
	GLOBAL  shift 101
	SESSION  shift 140
	ISOLATION  shift 104
	LEVEL  shift 111
	READ  shift 134
	WRITE  shift 171
	ONLY  shift 126
	REPEATABLE  shift 138
	COMMITTED  shift 88
	UNCOMMITTED  shift 158
	SERIALIZABLE  shift 141
	AGAINST  shift 77
	LANGUAGE  shift 108
	WITH  shift 170
	QUERY  shift 133
	EXPANSION  shift 95
	UNUSED  shift 160
	.  reduce 267 (src line 1506)

	non_reserved_keyword  goto 187
	table_id  goto 210

state 38
	begin_statement:  BEGIN.    (268)

	.  reduce 268 (src line 1511)


state 39
	begin_statement:  START.TRANSACTION 

	TRANSACTION  shift 211
	.  error


state 40
	commit_statement:  COMMIT.    (270)

	.  reduce 270 (src line 1521)


state 41
	rollback_statement:  ROLLBACK.    (271)

	.  reduce 271 (src line 1527)


state 42
	other_statement:  DESC.force_eof 
	force_eof: .    (793)

	.  reduce 793 (src line 3194)

	force_eof  goto 212

state 43
	other_statement:  DESCRIBE.force_eof 
	force_eof: .    (793)

	.  reduce 793 (src line 3194)

	force_eof  goto 213

state 44
	other_statement:  EXPLAIN.force_eof 
	force_eof: .    (793)

	.  reduce 793 (src line 3194)

	force_eof  goto 214

state 45
	other_statement:  REPAIR.force_eof 
	force_eof: .    (793)

	.  reduce 793 (src line 3194)

	force_eof  goto 215

state 46
	other_statement:  OPTIMIZE.force_eof 
	force_eof: .    (793)

	.  reduce 793 (src line 3194)

	force_eof  goto 216

state 47
	union_lhs:  openb.select_statement closeb 

	SELECT  shift 23
	'('  shift 50
	.  error

	select_statement  goto 217
	base_select  goto 21
	union_lhs  goto 22
	openb  goto 47

state 48
	insert_or_replace:  INSERT.    (33)

	.  reduce 33 (src line 415)


state 49
	insert_or_replace:  REPLACE.    (34)

	.  reduce 34 (src line 420)


state 50
	openb:  '('.    (791)

	.  reduce 791 (src line 3179)


state 51
	any_command:  command semicolon_opt.    (1)

	.  reduce 1 (src line 306)


state 52
	semicolon_opt:  ';'.    (3)

	.  reduce 3 (src line 314)


state 53
	select_statement:  base_select order_by_opt.limit_opt lock_opt 
	limit_opt: .    (518)

	LIMIT  shift 219
	.  reduce 518 (src line 2644)

	limit_opt  goto 218

state 54
	order_by_opt:  ORDER.BY order_list 

	BY  shift 220
	.  error


state 55
	select_statement:  union_lhs union_op.union_rhs order_by_opt limit_opt lock_opt 

	SELECT  shift 224
	'('  shift 50
	.  error

	base_select  goto 222
	union_rhs  goto 221
	openb  goto 223

state 56
	union_op:  UNION.    (281)
	union_op:  UNION.ALL 
	union_op:  UNION.DISTINCT 

	ALL  shift 225
	DISTINCT  shift 226
	.  reduce 281 (src line 1574)


state 57
	select_statement:  SELECT comment_opt.cache_opt NEXT num_val for_from table_name 
	base_select:  SELECT comment_opt.cache_opt distinct_opt straight_join_opt select_expression_list from_opt where_expression_opt group_by_opt having_opt 
	cache_opt: .    (284)

	SQL_NO_CACHE  shift 228
	SQL_CACHE  shift 229
	.  reduce 284 (src line 1588)

	cache_opt  goto 227

state 58
	comment_opt:  $$277.comment_list 
	comment_list: .    (279)

	.  reduce 279 (src line 1565)

	comment_list  goto 230

state 59
	stream_statement:  STREAM comment_opt.select_expression FROM table_name 

	OFFSET  shift 125
	EXISTS  shift 241
	DUPLICATE  shift 93
	DEFAULT  shift 238
	KEYS  shift 107
	VALUES  shift 280
	LAST_INSERT_ID  shift 109
	VALUE  shift 164
	SHARE  shift 142
	MODE  shift 118
	LEFT  shift 271
	RIGHT  shift 272
	'('  shift 50
	ID  shift 239
	HEX  shift 259
	STRING  shift 258
	INTEGRAL  shift 261
	FLOAT  shift 262
	HEXNUM  shift 263
	VALUE_ARG  shift 264
	COMMENT_KEYWORD  shift 86
	BIT_LITERAL  shift 260
	NULL  shift 265
	TRUE  shift 266
	FALSE  shift 267
	NOT  shift 236
	'!'  shift 252
	CASE  shift 279
	'+'  shift 249
	'-'  shift 250
	'*'  shift 232
	MOD  shift 291
	'~'  shift 251
	BINARY  shift 247
	UNDERSCORE_BINARY  shift 248
	INTERVAL  shift 253
	VIEW  shift 188
	IF  shift 289
	PRIMARY  shift 131
	SPATIAL  shift 145
	FULLTEXT  shift 98
	FOREIGN  shift 97
	KEY_BLOCK_SIZE  shift 106
	DATE  shift 89
	REPAIR  shift 137
	OPTIMIZE  shift 127
	TRUNCATE  shift 157
	PARTITION  shift 128
	REORGANIZE  shift 136
	LESS  shift 110
	THAN  shift 149
	PROCEDURE  shift 132
	TRIGGER  shift 156
	VINDEX  shift 189
	VINDEXES  shift 165
	STATUS  shift 147
	VARIABLES  shift 163
	BEGIN  shift 78
	START  shift 146
	TRANSACTION  shift 155
	COMMIT  shift 87
	ROLLBACK  shift 139
	BIT  shift 80
	TINYINT  shift 153
	SMALLINT  shift 144
	MEDIUMINT  shift 116
	INT  shift 102
	INTEGER  shift 103
	BIGINT  shift 79
	REAL  shift 135
	DOUBLE  shift 92
	FLOAT_TYPE  shift 96
	DECIMAL  shift 91
	NUMERIC  shift 124
	TIME  shift 150
	TIMESTAMP  shift 151
	DATETIME  shift 90
	YEAR  shift 172
	CHAR  shift 83
	VARCHAR  shift 162
	BOOL  shift 82
	CHARACTER  shift 84
	VARBINARY  shift 161
	NCHAR  shift 123
	TEXT  shift 148
	TINYTEXT  shift 154
	MEDIUMTEXT  shift 117
	LONGTEXT  shift 114
	BLOB  shift 81
	TINYBLOB  shift 152
	MEDIUMBLOB  shift 115
	LONGBLOB  shift 113
	JSON  shift 105
	ENUM  shift 94
	GEOMETRY  shift 99
	POINT  shift 129
	LINESTRING  shift 112
	POLYGON  shift 130
	GEOMETRYCOLLECTION  shift 100
	MULTIPOINT  shift 120
	MULTILINESTRING  shift 119
	MULTIPOLYGON  shift 121
	SIGNED  shift 143
	UNSIGNED  shift 159
	ZEROFILL  shift 173
	VITESS_KEYSPACES  shift 166
	VITESS_SHARDS  shift 167
	VITESS_TABLETS  shift 168
	VSCHEMA_TABLES  shift 169
	NAMES  shift 122
	CHARSET  shift 85
	GLOBAL  shift 101
	SESSION  shift 140
	ISOLATION  shift 104
	LEVEL  shift 111
	READ  shift 134
	WRITE  shift 171
	ONLY  shift 126
	REPEATABLE  shift 138
	COMMITTED  shift 88
	UNCOMMITTED  shift 158
	SERIALIZABLE  shift 141
	CURRENT_TIMESTAMP  shift 281
	DATABASE  shift 290
	CURRENT_DATE  shift 287
	CURRENT_TIME  shift 288
	LOCALTIME  shift 285
	LOCALTIMESTAMP  shift 286
	UTC_DATE  shift 284
	UTC_TIME  shift 283
	UTC_TIMESTAMP  shift 282
	REPLACE  shift 292
	CONVERT  shift 273
	CAST  shift 274
	SUBSTR  shift 275
	SUBSTRING  shift 276
	GROUP_CONCAT  shift 278
	MATCH  shift 277
	AGAINST  shift 77
	LANGUAGE  shift 108
	WITH  shift 170
	QUERY  shift 133
	EXPANSION  shift 95
	UNUSED  shift 160
	.  error

	select_expression  goto 231
	expression  goto 233
	condition  goto 235
	boolean_value  goto 243
	value  goto 242
	value_expression  goto 237
	function_call_keyword  goto 255
	function_call_nonkeyword  goto 256
	function_call_generic  goto 254
	function_call_conflict  goto 257
	row_tuple  goto 269
	tuple_expression  goto 245
	subquery  goto 246
	column_name  goto 244
	non_reserved_keyword  goto 240
	sql_id  goto 268
	table_id  goto 234
	openb  goto 270

state 60
	insert_statement:  insert_or_replace comment_opt.ignore_opt into_table_name opt_partition_clause insert_data on_dup_opt 
	insert_statement:  insert_or_replace comment_opt.ignore_opt into_table_name opt_partition_clause SET update_list on_dup_opt 
	ignore_opt: .    (570)

	IGNORE  shift 176
	.  reduce 570 (src line 2882)

	ignore_opt  goto 293

state 61
	update_statement:  UPDATE comment_opt.table_references SET update_list where_expression_opt order_by_opt limit_opt 

	OFFSET  shift 125
	DUPLICATE  shift 93
	KEYS  shift 107
	LAST_INSERT_ID  shift 109
	VALUE  shift 164
	SHARE  shift 142
	MODE  shift 118
	'('  shift 50
	ID  shift 186
	COMMENT_KEYWORD  shift 86
	VIEW  shift 188
	PRIMARY  shift 131
	SPATIAL  shift 145
	FULLTEXT  shift 98
	FOREIGN  shift 97
	KEY_BLOCK_SIZE  shift 106
	DATE  shift 89
	REPAIR  shift 137
	OPTIMIZE  shift 127
	TRUNCATE  shift 157
	PARTITION  shift 128
	REORGANIZE  shift 136
	LESS  shift 110
	THAN  shift 149
	PROCEDURE  shift 132
	TRIGGER  shift 156
	VINDEX  shift 189
	VINDEXES  shift 165
	STATUS  shift 147
	VARIABLES  shift 163
	BEGIN  shift 78
	START  shift 146
	TRANSACTION  shift 155
	COMMIT  shift 87
	ROLLBACK  shift 139
	BIT  shift 80
	TINYINT  shift 153
	SMALLINT  shift 144
	MEDIUMINT  shift 116
	INT  shift 102
	INTEGER  shift 103
	BIGINT  shift 79
	REAL  shift 135
	DOUBLE  shift 92
	FLOAT_TYPE  shift 96
	DECIMAL  shift 91
	NUMERIC  shift 124
	TIME  shift 150
	TIMESTAMP  shift 151
	DATETIME  shift 90
	YEAR  shift 172
	CHAR  shift 83
	VARCHAR  shift 162
	BOOL  shift 82
	CHARACTER  shift 84
	VARBINARY  shift 161
	NCHAR  shift 123
	TEXT  shift 148
	TINYTEXT  shift 154
	MEDIUMTEXT  shift 117
	LONGTEXT  shift 114
	BLOB  shift 81
	TINYBLOB  shift 152
	MEDIUMBLOB  shift 115
	LONGBLOB  shift 113
	JSON  shift 105
	ENUM  shift 94
	GEOMETRY  shift 99
	POINT  shift 129
	LINESTRING  shift 112
	POLYGON  shift 130
	GEOMETRYCOLLECTION  shift 100
	MULTIPOINT  shift 120
	MULTILINESTRING  shift 119
	MULTIPOLYGON  shift 121
	SIGNED  shift 143
	UNSIGNED  shift 159
	ZEROFILL  shift 173
	VITESS_KEYSPACES  shift 166
	VITESS_SHARDS  shift 167
	VITESS_TABLETS  shift 168
	VSCHEMA_TABLES  shift 169
	NAMES  shift 122
	CHARSET  shift 85
	GLOBAL  shift 101
	SESSION  shift 140
	ISOLATION  shift 104
	LEVEL  shift 111
	READ  shift 134
	WRITE  shift 171
	ONLY  shift 126
	REPEATABLE  shift 138
	COMMITTED  shift 88
	UNCOMMITTED  shift 158
	SERIALIZABLE  shift 141
	AGAINST  shift 77
	LANGUAGE  shift 108
	WITH  shift 170
	QUERY  shift 133
	EXPANSION  shift 95
	UNUSED  shift 160
	.  error

	table_references  goto 294
	table_reference  goto 295
	table_factor  goto 296
	join_table  goto 297
	table_name  goto 301
	aliased_table_name  goto 298
	subquery  goto 299
	non_reserved_keyword  goto 187
	table_id  goto 185
	openb  goto 300

state 62
	delete_statement:  DELETE comment_opt.FROM table_name opt_partition_clause where_expression_opt order_by_opt limit_opt 
	delete_statement:  DELETE comment_opt.FROM table_name_list USING table_references where_expression_opt 
	delete_statement:  DELETE comment_opt.table_name_list from_or_using table_references where_expression_opt 
